--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - /app/node_modules
       - .:/app
     environment:
-      NODE_ENV: production
+      NODE_ENV: dev
   test:
     build:
       context: .
