update for aws elasticbeanstalk

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,19 +6,8 @@ services:
     # build: .
     build:
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
-      - '3000:3000'
-    volumes:
-      - /app/node_modules
-      - .:/app
+      - '80:80'
     environment:
-      NODE_ENV: dev
-  test:
-    build:
-      context: .
-      dockerfile: Dockerfile.dev
-    volumes:
-      - /app/node_modules
-      - .:/app
-    command: ["npm", "run", "test"]
+      NODE_ENV: prod
