--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,16 @@ before_install:
   - docker build -t pritamkhose/docker_frontend -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true pritamkhose/docker_frontend npm run test
+  - docker run -e CI=true pritamkhose/docker_frontend npm run test -- -- coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-1'
+  app: 'docker'
+  env: 'docker-env'
+  bucket_name: 'elasticbeanstalk-us-east-1-923445559289'
+  bucket_path: 'docker'
+  on:
+    branch: main
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
